--- a/esmvaltool/recipes/recipe_bremen_exercise_2.yml
+++ b/esmvaltool/recipes/recipe_bremen_exercise_2.yml
@@ -1,22 +1,18 @@
 ---
 
 datasets:
-  - {dataset: ERA-Interim, project: OBS,   tier: 3,   type: reanaly,   version: 1,       start_year: 2000, end_year: 2005}
-  - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
-  - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
-  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
+  - {dataset: ERA-Interim, project: OBS,   tier: 3,   type: reanaly,   version: 1,       start_year: 1980, end_year: 2005}
+  - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
+  - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
+  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1980, end_year: 2005}
 
 
 preprocessors:
 
-  calc_mmm:
-    regrid:
-      target_grid: reference_dataset
-      scheme: linear
-    multi_model_statistics:
-      exclude: reference_dataset
-      span: overlap
-      statistics: [mean]
+  global_mean:
+    average_region:
+      coord1: latitude
+      coord2: longitude
 
 
 diagnostics:
@@ -24,10 +20,10 @@ diagnostics:
   exercise_2:
     description: Climate Modelling Part 2 (Bremen, 2018), recipe for exercise 2.
     variables:
-      pr:
-        preprocessor: calc_mmm
+      tas:
+        preprocessor: global_mean
         field: T2Ms
         reference_dataset: ERA-Interim
     scripts:
       exercise_script_2:
-        script: bremen_practicals/exercise_1.py
+        script: bremen_practicals/exercise_2.py
