--- a/esmvaltool/recipes/recipe_bremen_exercise_3.yml
+++ b/esmvaltool/recipes/recipe_bremen_exercise_3.yml
@@ -3,13 +3,13 @@
 datasets:
   - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1961, end_year: 1990}
   - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1961, end_year: 1990}
-  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1961, end_year: 1990}
+  - {dataset: NorESM1-M,   project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 1961, end_year: 1990}
   - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: rcp26,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
   - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: rcp26,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
-  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: rcp26,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
+  - {dataset: NorESM1-M,   project: CMIP5, mip: Amon, exp: rcp26,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
   - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: rcp85,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
   - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: rcp85,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
-  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: rcp85,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
+  - {dataset: NorESM1-M,   project: CMIP5, mip: Amon, exp: rcp85,      ensemble: r1i1p1, start_year: 2006, end_year: 2100}
 
 
 preprocessors:
@@ -28,7 +28,6 @@ diagnostics:
       tas:
         preprocessor: global_mean
         field: T2Ms
-        reference_dataset: ERA-Interim
     scripts:
       exercise_script_3:
         script: bremen_practicals/exercise_3.py
