--- a/esmvaltool/recipes/recipe_bremen_exercise_1.yml
+++ b/esmvaltool/recipes/recipe_bremen_exercise_1.yml
@@ -4,7 +4,7 @@ datasets:
   - {dataset: ERA-Interim, project: OBS,   tier: 3,   type: reanaly,   version: 1,       start_year: 2000, end_year: 2005}
   - {dataset: CanESM2,     project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
   - {dataset: MPI-ESM-LR,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
-  - {dataset: NorESM1-ME,  project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
+  - {dataset: NorESM1-M,   project: CMIP5, mip: Amon, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
 
 
 preprocessors:
