--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -23,6 +23,10 @@ CMIP6:
   input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_[grid]_*.nc'
   output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[field]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP6'
+  institutes:
+    'EC-Earth3': ['EC-Earth-Consortium']
+    'IPSL-CM6A-LR': ['IPSL']
+    'GISS-E2-1-G': ['NASA-GISS']
 
 CMIP5:
   input_dir:
